syntax = "proto3";

option go_package = "pb/";
import "memory_message.proto";
import "money_message.proto";

message Filter {
  Money max_money = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}